--- a/test/fixtures/tasks.yml
+++ b/test/fixtures/tasks.yml
@@ -4,10 +4,10 @@ one:
   name: MyString
   description: MyText
   due_date: 2015-03-26 20:34:34
-  project_id: 
+  #project_id: 
 
 two:
   name: MyString
   description: MyText
   due_date: 2015-03-26 20:34:34
-  project_id: 
+  #project_id: 
