Added passing assignemt tests for tasks and projects controllers

--- a/test/fixtures/projects.yml
+++ b/test/fixtures/projects.yml
@@ -4,9 +4,10 @@ one:
   name: MyString
   description: MyText
   due_date: 2019-03-25 09:40:12
+  user_id: 1
 two:
   name: MyString
   description: MyText
   due_date: 2019-03-25 09:40:12
-
+  user_id: 2
   
