Added another user to the users.yml

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,3 +6,7 @@ two:
  first_name: Example
  last_name: Example
  email: example@example.com
+three:
+ first_name: Another
+ last_name: User
+ email: user@example.com
